--- a/index.html
+++ b/index.html
@@ -22,18 +22,29 @@
       </div>
     </div>
     <header class="welcome-header">
-      <h1>Welcome to KakaoTalk</h1>
-      <p>
+      <h1 class="welcome-header__title">Welcome to KakaoTalk</h1>
+      <p class="welcome-header__text">
         If you have a Kakao Account,<br />
         log in with your email or phone number.
       </p>
     </header>
     <form action="friends.html" class="login-form">
-      <input required type="text" placeholder="Email or Phone number" />
-      <input required minlength="10" type="password" placeholder="Password" />
-      <input type="submit" value="Log In" />
-      <input type="submit" value="Sign Up" />
-      <a href="#">Find Kakao Account or Password</a>
+      <input
+        class="login-form__input"
+        required
+        type="text"
+        placeholder="Email or Phone number"
+      />
+      <input
+        class="login-form__input"
+        required
+        minlength="10"
+        type="password"
+        placeholder="Password"
+      />
+      <input class="login-form__btn" type="submit" value="Log In" />
+      <input class="login-form__btn" type="submit" value="Sign Up" />
+      <a class="login-form__link" href="#">Find Kakao Account or Password</a>
     </form>
     <script
       src="https://kit.fontawesome.com/824e49a42d.js"
