--- a/friends.html
+++ b/friends.html
@@ -7,19 +7,29 @@
     <title>Friends - Kakao Talk</title>
   </head>
   <body>
-    <div class="status-bar">
-      <div class="status-bar__column">
-        <span>No Service</span>
-        <i class="fas fa-wifi"></i>
+    <div class="top-fixed">
+      <div class="status-bar">
+        <div class="status-bar__column">
+          <span>No Service</span>
+          <i class="fas fa-wifi"></i>
+        </div>
+        <div class="status-bar__column">
+          <span>18:43</span>
+        </div>
+        <div class="status-bar__column">
+          <span>11%</span>
+          <i class="fas fa-battery-quarter fa-lg"></i>
+          <i class="fas fa-bolt"></i>
+        </div>
       </div>
-      <div class="status-bar__column">
-        <span>18:43</span>
-      </div>
-      <div class="status-bar__column">
-        <span>11%</span>
-        <i class="fas fa-battery-quarter fa-lg"></i>
-        <i class="fas fa-bolt"></i>
-      </div>
+      <header class="screen-header">
+        <h1 class="screen-header__title">Firends</h1>
+        <div class="screen-header__icons">
+          <span><i class="fas fa-search fa-lg"></i></span>
+          <span><i class="fas fa-music fa-lg"></i></span>
+          <span><i class="fas fa-cog fa-lg"></i></span>
+        </div>
+      </header>
     </div>
     <nav class="nav">
       <ul class="nav__list">
@@ -41,6 +51,7 @@
         </li>
         <li class="nav__btn">
           <a href="more.html" class="nav__link">
+            <div class="nav__dot"></div>
             <i class="fas fa-ellipsis-h fa-lg"></i>
           </a>
         </li>
