--- a/friends.html
+++ b/friends.html
@@ -31,6 +31,51 @@
         </div>
       </header>
     </div>
+    <div class="friends-display">
+      <a href="#">
+        <i class="fas fa-exclamation-circle"></i>
+        Firends' Names Display
+        <i class="fas fa-chevron-right fa-xs"></i>
+      </a>
+    </div>
+    <main class="firends-screen">
+      <div class="user-components">
+        <div class="user-components__column">
+          <img
+          src="https://pbs.twimg.com/profile_images/1071019720642576384/tXxHDg4H_400x400.jpg"
+          / class="user-components__avatar user-components__avatar--xl">
+          <div class="user-components__text">
+            <h4 class="user-components__title">Haneul</h4>
+            <!-- <h6 class="user-components__subtitle">Whatever subtitle</h6> -->
+          </div>
+        </div>
+        <div class="user-components__column"></div>
+      </div>
+      <div class="firends-screen__channel">
+        <div class="firends-screen__channel-header">
+          <span>Channel</span>
+          <i class="fas fa-chevron-up fa-xs"></i>
+        </div>
+        <div class="user-components">
+          <div class="user-components__column">
+            <img
+            src="https://pbs.twimg.com/profile_images/1071019720642576384/tXxHDg4H_400x400.jpg"
+            / class="user-components__avatar user-components__avatar--sm">
+            <div class="user-components__text">
+              <h4
+                class="user-components__title user-components__title--not-bold"
+              >
+                Channel
+              </h4>
+            </div>
+          </div>
+          <div class="user-components__column">
+            <span>2</span>
+            <i class="fas fa-chevron-right fa-xs"></i>
+          </div>
+        </div>
+      </div>
+    </main>
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
