--- a/chats.html
+++ b/chats.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Friends - Kakao Talk</title>
+    <title>Chats - Kakao Talk</title>
   </head>
   <body>
     <div class="top-fixed">
@@ -23,9 +23,10 @@
         </div>
       </div>
       <header class="screen-header">
-        <h1 class="screen-header__title">Firends</h1>
+        <h1 class="screen-header__title">Chats</h1>
         <div class="screen-header__icons">
           <span><i class="fas fa-search fa-lg"></i></span>
+          <span><i class="far fa-comment-dots fa-lg"></i></span>
           <span><i class="fas fa-music fa-lg"></i></span>
           <span>
             <div class="badge--small"></div>
@@ -36,64 +37,36 @@
         </div>
       </header>
     </div>
-    <div class="friends-display">
-      <a href="#">
-        <i class="fas fa-exclamation-circle"></i>
-        Firends' Names Display
-        <i class="fas fa-chevron-right fa-xs"></i>
-      </a>
-    </div>
     <main class="main-screen">
-      <div class="user-components">
-        <div class="user-components__column">
-          <img
-          src="https://pbs.twimg.com/profile_images/1071019720642576384/tXxHDg4H_400x400.jpg"
-          / class="user-components__avatar user-components__avatar--xl">
-          <div class="user-components__text">
-            <h4 class="user-components__title">Haneul</h4>
-            <!-- <h6 class="user-components__subtitle">Whatever subtitle</h6> -->
-          </div>
-        </div>
-        <div class="user-components__column"></div>
-      </div>
-      <div class="main-screen__channel">
-        <div class="main-screen__channel-header">
-          <span>Channel</span>
-          <i class="fas fa-chevron-up fa-xs"></i>
-        </div>
+      <a href="chat.html">
         <div class="user-components">
           <div class="user-components__column">
             <img
             src="https://pbs.twimg.com/profile_images/1071019720642576384/tXxHDg4H_400x400.jpg"
-            / class="user-components__avatar user-components__avatar--sm">
+            / class="user-components__avatar">
             <div class="user-components__text">
-              <h4
-                class="user-components__title user-components__title--not-bold"
-              >
-                Channel
-              </h4>
+              <h4 class="user-components__title">Haneul</h4>
+              <h6 class="user-components__subtitle">Whatever subtitle</h6>
             </div>
           </div>
           <div class="user-components__column">
-            <div>
-              <span>2</span>
-              <i class="fas fa-chevron-right fa-xs"></i>
-            </div>
+            <span class="user-components__time">23:11</span>
+            <div class="badge">3</div>
           </div>
         </div>
-      </div>
+      </a>
     </main>
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
           <a href="friends.html" class="nav__link">
-            <i class="fas fa-user fa-lg"></i>
+            <i class="far fa-user fa-lg"></i>
           </a>
         </li>
         <li class="nav__btn">
           <a href="chats.html" class="nav__link">
             <span class="nav__notification badge">3</span>
-            <i class="far fa-comment fa-lg"></i
+            <i class="fas fa-comment fa-lg"></i
           ></a>
         </li>
         <li class="nav__btn">
@@ -109,9 +82,6 @@
         </li>
       </ul>
     </nav>
-    <div class="splash-screen">
-      <i class="fas fa-comment fa-lg"></i>
-    </div>
     <div class="screen-size">
       <span>Please reduce your the screen size.</span>
     </div>
