--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
       <input class="login-form__btn" type="submit" value="Sign Up" />
       <a class="login-form__link" href="#">Find Kakao Account or Password</a>
     </form>
+    <div class="screen-size">
+      <span>Please reduce your the screen size.</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/824e49a42d.js"
       crossorigin="anonymous"
